# OSLAroused

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Debug.ppj  Release.ppj  vcpkg-configuration.json  vcpkg.json
cmake/: XSEPlugin.cmake
contrib/Distribution/Assets/interface/Translations/: OSLAroused_ENGLISH.txt
contrib/Distribution/PapyrusSources/: OSLArousedNative.psc  OSLAroused_AdapterSexLab.psc  OSLAroused_MCM.psc  OSLAroused_Main.psc
src/: Config.cpp  Config.h  Debug.h  GameForms.h  Hooks.h  Main.cpp  PCH.h  PersistedData.cpp  PersistedData.h  RuntimeEvents.cpp  Settings.h
src/Managers/: ActorState.h  ActorStateManager.cpp  ActorStateManager.h  ArousalManager.cpp  ArousalManager.h  LibidoManager.cpp
src/Papyrus/: Papyrus.cpp  PapyrusInterface.cpp  PapyrusInterface.h
src/Utilities/: Ticker.h  Utils.cpp  Utils.h
src/include/: IPluginInterface.h
